refacere instrumente dupa noile clase

--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. PERSON WHO COMPLETED THE INFORMATION ABOUT THIS CHILD</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. PERSON WHO COMPLETED THE INFORMATION ABOUT THIS CHILD</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Name</div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. MAIN INFORMATION ABOUT THE CHILD</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. MAIN INFORMATION ABOUT THE CHILD</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PIN. Birth certificate/Passport/Identification document</div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. INFORMATION ABOUT THE CHILD'S FAMILY</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. INFORMATION ABOUT THE CHILD'S FAMILY</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.1. THE CHILD'S MOTHER</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2681,7 +2681,7 @@
             </div>
 
             <!-- /* Section 4 */ -->
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. THE CHILD'S FIRST ADMISSION INTO THE CHILD CARE SYSTEM</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. THE CHILD'S FIRST ADMISSION INTO THE CHILD CARE SYSTEM</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -3068,7 +3068,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. INFORMATION FROM THE CHILD'S FIRST ADMISSION INTO THE CHILD CARE SYSTEM</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. INFORMATION FROM THE CHILD'S FIRST ADMISSION INTO THE CHILD CARE SYSTEM</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. THE CHILD'S HEALTH STATUS</h3>
 
             <p class="mt-10">QHEALTH: At the time of the child's first admission into the child care system...</p>
@@ -4180,7 +4180,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. THE CHILD'S HISTORY WITHIN THE CARE SYSTEM</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. THE CHILD'S HISTORY WITHIN THE CARE SYSTEM</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SH1. How many services (residential or family-based) had the child gone through from their first admission into the system until their admission into the current child care service?<small class="my-2 block italic text-red-500 mt-4">Fill in the number. Services prior to the current service include all transfers between any two services within the system (residential or family-based), including transfers between two services of the same type. Attention, the service they are currently admitted in does not count!</small>
@@ -4914,7 +4914,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. THE CHILD'S ACCESS TO RECOVERY AND REHABILITATION SERVICES</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. THE CHILD'S ACCESS TO RECOVERY AND REHABILITATION SERVICES</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK21.a. Does the child need any rehabilitation services (such as speech therapy, correctional-pedagogical rehabilitation, physical therapy, etc.) according to their Individual Rehabilitation Plan (or a similar instrument, such as an individual development plan)?</div>
@@ -5050,7 +5050,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. DISABILITY AND OTHER VULNERABILITIES</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. DISABILITY AND OTHER VULNERABILITIES</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK22_1. Does the child have an official disability status (a disability certificate)?</div>
@@ -5364,7 +5364,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. THE CHILD'S CURRENT HEALTH STATUS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. THE CHILD'S CURRENT HEALTH STATUS</h2>
 
             <p>QHEALTHP: At present...</p>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
@@ -5538,7 +5538,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">10. THE CHILD'S CURRENT EDUCATION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">10. THE CHILD'S CURRENT EDUCATION</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EDK0. Is the child enrolled in preschool/school?<small class="my-2 block italic text-red-500">Check 1. Yes also for homeschooled children.</small></div>
@@ -5697,7 +5697,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">11. INDEPENDENT LIVING SKILLS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">11. INDEPENDENT LIVING SKILLS</h2>
             <small class="my-2 block italic text-red-500">The section only applies to youth aged 16 and over.</small>
 
             <p>DVI. On a scale from 1 = not at all to 10 = total, how do you assess the level of development of the youth in the following areas of independent living skills/abilities?</p>
@@ -6045,7 +6045,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">12. RISK BEHAVIORS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">12. RISK BEHAVIORS</h2>
             <small class="my-2 block italic text-red-500">Attention! This section is to be filled in only for children older than 10.</small>
 
             <p>QRISKP: During the child's time into the system (from their last admission until present), has the child had any of the following risk behaviors:</p>
@@ -6186,7 +6186,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">13. CASE MONITORING</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">13. CASE MONITORING</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMGT1. Does the child currently have a specialist who monitors his/her case?</div>
@@ -6288,7 +6288,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">14. QUALITY OF SERVICES</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">14. QUALITY OF SERVICES</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SQ1. In the past six months, did the child receive in a timely manner the necessary services and interventions, appropriate to their real situation, in accordance with their assessed needs (Individual Protection Plan, Rehabilitation plan, etc.)?</div>
@@ -6392,7 +6392,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">15. THE CHILD'S RELATIONSHIP WITH THEIR FAMILY AND CHANCES FOR (RE)INTEGRATION IN A FAMILY ENVIRONMENT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">15. THE CHILD'S RELATIONSHIP WITH THEIR FAMILY AND CHANCES FOR (RE)INTEGRATION IN A FAMILY ENVIRONMENT</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SK1. In the past six months, has the specialist who monitors the case or other Makhala/district level specialist paid a home visit and talked face-to-face with this child's parents, grandparents, aunts or extended family?</div>
