--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ЛИЦО, ЗАПОЛНИВШЕЕ СВЕДЕНИЯ ОБ ЭТОМ РЕБЕНКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ЛИЦО, ЗАПОЛНИВШЕЕ СВЕДЕНИЯ ОБ ЭТОМ РЕБЕНКЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>ОМR1. Имя</div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ОСНОВНАЯ ИНФОРМАЦИЯ О РЕБЕНКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. ОСНОВНАЯ ИНФОРМАЦИЯ О РЕБЕНКЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Личный идентификационный номер. Свидетельство о рождении/Паспорт/Документ, удостоверяющий личность</div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. ИНФОРМАЦИЯ О СЕМЬЕ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. ИНФОРМАЦИЯ О СЕМЬЕ РЕБЕНКА</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.1. МАТЬ РЕБЕНКА</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2681,7 +2681,7 @@
             </div>
 
             <!-- /* Section 4 */ -->
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ПЕРВЫЙ ПРИЕМ РЕБЕНКА В СИСТЕМУ ОПЕКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ПЕРВЫЙ ПРИЕМ РЕБЕНКА В СИСТЕМУ ОПЕКИ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -3068,7 +3068,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. ИНФОРМАЦИЯ ПРИ ПЕРВОМ ПРИЕМЕ РЕБЕНКА В СИСТЕМУ ОПЕКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ИНФОРМАЦИЯ ПРИ ПЕРВОМ ПРИЕМЕ РЕБЕНКА В СИСТЕМУ ОПЕКИ</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. СОСТОЯНИЕ ЗДОРОВЬЯ РЕБЕНКА</h3>
 
             <p class="mt-10">QHEALTH: На момент первого приема ребенка в систему опеки...</p>
@@ -4180,7 +4180,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. ИСТОРИЯ РЕБЕНКА В СИСТЕМЕ ОПЕКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. ИСТОРИЯ РЕБЕНКА В СИСТЕМЕ ОПЕКИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SH1. Сколько услуг (проживание в интернате или в семейной форме опеки) прошел ребенок с момента его первого приема в систему до приема в текущую службу опеки?<small class="my-2 block italic text-red-500 mt-4">Введите номер. Услуги, предшествующие текущей услуге, включают все переводы между любыми двумя услугами в рамках системы (проживание в интернате или с семьей), включая переводы между двумя услугами одного и того же типа. Внимание, служба, на которую они в данный момент приняты, не засчитывается!</small>
@@ -4914,7 +4914,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. ДОСТУП РЕБЕНКА К УСЛУГАМ ВОССТАНОВЛЕНИЯ И РЕАБИЛИТАЦИИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. ДОСТУП РЕБЕНКА К УСЛУГАМ ВОССТАНОВЛЕНИЯ И РЕАБИЛИТАЦИИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK21.a. Нуждается ли ребенок в реабилитации (любого типа, например логопедия, коррекционно-педагогическая реабилитация, физиотерапия и т. д.) в соответствии с Индивидуальным планом реабилитации (или аналогичным инструментом, например, индивидуальным планом развития)?</div>
@@ -5050,7 +5050,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. ИНВАЛИДНОСТЬ И ДРУГАЯ УЯЗВИМОСТЬ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. ИНВАЛИДНОСТЬ И ДРУГАЯ УЯЗВИМОСТЬ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK22_1. Имеет ли ребенок официальный статус инвалидности (справка об инвалидности)?</div>
@@ -5364,7 +5364,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. ТЕКУЩЕЕ СОСТОЯНИЕ ЗДОРОВЬЯ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. ТЕКУЩЕЕ СОСТОЯНИЕ ЗДОРОВЬЯ РЕБЕНКА</h2>
 
             <p>QHEALTHP: В настоящее время...</p>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
@@ -5538,7 +5538,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">10. ТЕКУЩЕЕ ОБРАЗОВАНИЕ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">10. ТЕКУЩЕЕ ОБРАЗОВАНИЕ РЕБЕНКА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EDK0. Зачислен ли ребенок в детский сад/школу?<small class="my-2 block italic text-red-500">Проверить 1. Да, также для детей, обучающихся на дому.</small></div>
@@ -5697,7 +5697,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">11. НАВЫКИ НЕЗАВИСИМОЙ ЖИЗНИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">11. НАВЫКИ НЕЗАВИСИМОЙ ЖИЗНИ</h2>
             <small class="my-2 block italic text-red-500">Этот раздел распространяется только на молодежь в возрасте 16 лет и старше.</small>
 
             <p>DVI. По шкале от 1 = совсем нет до 10 = всего, как вы оцениваете уровень развития молодежи в следующих областях навыков/способностей самостоятельной жизни?</p>
@@ -6045,7 +6045,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">12. РИСКОВАННОЕ ПОВЕДЕНИЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">12. РИСКОВАННОЕ ПОВЕДЕНИЕ</h2>
             <small class="my-2 block italic text-red-500">Внимание! Данный раздел заполняется только для детей старше 10 лет.</small>
 
             <p>QRISKP: За время пребывания ребенка в системе (с момента его последнего приема до настоящего времени) было ли у ребенка какое-либо из следующих рискованных форм поведения:</p>
@@ -6186,7 +6186,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">13. МОНИТОРИНГ ДЕЛА РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">13. МОНИТОРИНГ ДЕЛА РЕБЕНКА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMGT1. Есть ли у ребенка в настоящее время специалист, который проводит мониторинг  его/ее дела?</div>
@@ -6288,7 +6288,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">14. КАЧЕСТВО УСЛУГ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">14. КАЧЕСТВО УСЛУГ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SQ1. Получал ли ребенок за последние шесть месяцев своевременно необходимые услуги и вмешательства, соответствующие его реальной ситуации, в соответствии с его оцененными потребностями (Индивидуальный план защиты, план реабилитации и т. д.)?</div>
@@ -6392,7 +6392,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">15. ОТНОШЕНИЯ РЕБЕНКА С СЕМЬЕЙ И ВОЗМОЖНОСТИ НА (РЕ)ИНТЕГРАЦИЮ В СЕМЬЮ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">15. ОТНОШЕНИЯ РЕБЕНКА С СЕМЬЕЙ И ВОЗМОЖНОСТИ НА (РЕ)ИНТЕГРАЦИЮ В СЕМЬЮ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SK1. Посещали ли дом и разговаривал ли с глазу на глаз с родителями, бабушками и дедушками, тетями или расширенной семьей этого ребенка ,специалист, сопровождающий дело ребенка или другой специалист махаллинского/районного уровня за последние шесть месяцев?</div>
