--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. USHBU BOLA HAQIDA MA'LUMOTNI TO'LDIRGAN SHAXS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. USHBU BOLA HAQIDA MA'LUMOTNI TO'LDIRGAN SHAXS</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Ism</div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. BOLA HAQIDA ASOSIY MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. BOLA HAQIDA ASOSIY MA'LUMOT</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Shaxsiy identifikatsiya raqami. Tug'ilganlik haqidagi guvohnoma / Pasport / shaxsni tasdiqlovchi hujjat</div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. BOLA OILASI HAQIDA MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. BOLA OILASI HAQIDA MA'LUMOT</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.1. BOLA ONASI</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -2681,7 +2681,7 @@
             </div>
 
             <!-- /* Section 4 */ -->
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. BOLANING VASIYLIK TIZIMIGA DASTLABKI QABULI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. BOLANING VASIYLIK TIZIMIGA DASTLABKI QABULI</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -3068,7 +3068,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. BOLANING VASIYLIK TIZIMIGA DASTLABKI QABUL QILINISHI BO'YICHA MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. BOLANING VASIYLIK TIZIMIGA DASTLABKI QABUL QILINISHI BO'YICHA MA'LUMOT</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. BOLA SALOMATLIGINING HOLATI</h3>
 
             <p class="mt-10">QHEALTH: Bolani vasiylik tizimga ilk bor qabul qilish paytida...</p>
@@ -4180,7 +4180,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. BOLANING VASIYLIK TIZIMIDAGI TARIXI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. BOLANING VASIYLIK TIZIMIDAGI TARIXI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SH1. Bola tizimga ilk bor qabul qilinganidan boshlab hozirgi vasiylik xizmatiga qabul qilinguniga qadar qancha xizmatdan (muassasa yoki oilaviy) o'tgan?<small class="my-2 block italic text-red-500 mt-4">Raqamni kiriting. Joriy xizmatdan oldingi xizmatlar tizim ichidagi har qanday ikkita xizmat (muassasa yoki oilaviy) o'rtasidagi barcha o'tkazmalarni, shu jumladan bir xil turdagi ikkita xizmat o'rtasidagi o'tkazmalarni o'z ichiga oladi. Diqqat, ular hozirda qabul qilingan xizmat hisobga olinmaydi!</small>
@@ -4914,7 +4914,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. BOLANING QAYTA TIKLANISH VA REABILITATSIYA XIZMATLARIDAN FOYDALANISHI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. BOLANING QAYTA TIKLANISH VA REABILITATSIYA XIZMATLARIDAN FOYDALANISHI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK21.a. Bolaga Individual reabilitatsiya rejasi (yoki shunga o'xshash vosita, masalan, individual rivojlanish rejasi) asosida terapiya (har qanday turdagi, masalan, logopediya (nutq to'g'rilanishi), korreksion-pedagogik reabilitatsiya, fizioterapiya va b.) talab etiladimi?</div>
@@ -5050,7 +5050,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. NOGIRONLIK VA BOSHQA ZAIFLIKLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. NOGIRONLIK VA BOSHQA ZAIFLIKLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>LK22_1. Bolaning rasmiy nogironlik maqomi (nogironlik to'g'risidagi guvohnoma) mavjudmi?</div>
@@ -5364,7 +5364,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. BOLA SALOMATLIGINING JORIY HOLATI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. BOLA SALOMATLIGINING JORIY HOLATI</h2>
 
             <p>QHEALTHP: Hozirda ...</p>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
@@ -5538,7 +5538,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">10. BOLANING HOZIRGI MA'LUMOTI/TA'LIM DARAJASI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">10. BOLANING HOZIRGI MA'LUMOTI/TA'LIM DARAJASI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EDK0. Bola maktabgacha ta'lim muassasasiga qabul qilinganmi?<small class="my-2 block italic text-red-500">Tekshiring 1. Ha, uyda o'qiydigan bolalar uchun ham.</small></div>
@@ -5697,7 +5697,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">11. MUSTAQIL YASHASH KO'NIKMALARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">11. MUSTAQIL YASHASH KO'NIKMALARI</h2>
             <small class="my-2 block italic text-red-500">Bo'lim faqat 16 va undan katta yoshdagi yoshlar uchun amal qiladi.</small>
 
             <p>DVI. 1 = tamoman yo'qdan 10 gacha bo'lgan shkala bo'yicha, yoshlarning quyidagi mustaqil yashash ko'nikmalari/qobiliyatlari bo'yicha rivojlanish darajasini qanday baholaysiz?</p>
@@ -6045,7 +6045,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">12. XAVFLI XULQ-ATVOR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">12. XAVFLI XULQ-ATVOR</h2>
             <small class="my-2 block italic text-red-500">Diqqat! Ushbu bo'lim faqat 10 yoshdan katta bolalar uchun to'ldirilishi kerak.</small>
 
             <p>QRISKP: Bolaning tizimga qabul qilinishi davomida (so'nggi qabul qilinganidan to hozirgi kungacha) bolada quyidagi xavfli xatti-harakatlardan birortasi bo'lganmi:</p>
@@ -6186,7 +6186,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">13. BOLA ISHINING MONITORINGI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">13. BOLA ISHINING MONITORINGI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMGT1. Hozirda bola ishini kuzatuvchi/yurituvchi mutaxassis mavjudmi?</div>
@@ -6288,7 +6288,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">14. XIZMATLAR SIFATI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">14. XIZMATLAR SIFATI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SQ1. O'tgan olti oyda bola baholangan ehtiyojlariga (Individual himoya rejasi, reabilitatsiya rejasi va h.k.) muvofiq, real holatiga mos keladigan zarur xizmatlar va choralardan o'z vaqtida foydalana oldimi?</div>
@@ -6392,7 +6392,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">15. BOLANING O'Z OILASI BILAN MUNOSABATI VA OILA MUHITIGA (QAYTA) INTEGRATSIYALASHUVI (QO'SHILISH) IMKONIYATLARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">15. BOLANING O'Z OILASI BILAN MUNOSABATI VA OILA MUHITIGA (QAYTA) INTEGRATSIYALASHUVI (QO'SHILISH) IMKONIYATLARI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>SK1. O'tgan olti oy ichida bolaning ishini yurituvchi mutaxassis yoki boshqa Mahalla/tuman darajasidagi mutaxassis uyga tashrif buyurib, bolaning ota-onasi, buva-buvisi, xola-ammasi yoki boshqa oila a'zolari bilan yuzma-yuz suhbatda bo'ldimi?</div>
