--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. PERSON WHO COMPLETED THE INFORMATION ABOUT THIS CHILD</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. PERSON WHO COMPLETED THE INFORMATION ABOUT THIS CHILD</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Name</div>
                 <div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. MAIN INFORMATION ABOUT THE CHILD</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. MAIN INFORMATION ABOUT THE CHILD</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PIN. Birth certificate/Passport/Identification document</div>
@@ -295,7 +295,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. INFORMATION ABOUT THE CHILD'S FAMILY</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. INFORMATION ABOUT THE CHILD'S FAMILY</h2>
 
 
 
@@ -2168,7 +2168,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. THE CHILD'S ADMISSION INTO THE SPECIALIZED EDUCATIONAL INSTITUTION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. THE CHILD'S ADMISSION INTO THE SPECIALIZED EDUCATIONAL INSTITUTION</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SA1. Date of the child's admission into the current specialized educational institution</div>
@@ -3183,7 +3183,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. CURRENT CHILD SITUATION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. CURRENT CHILD SITUATION</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. EDUCATION</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -4757,7 +4757,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. INDEPENDENT LIVING SKILLS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. INDEPENDENT LIVING SKILLS</h2>
 
             <small class="my-2 my-2 block italic text-red-500">The section only applies to youth aged 16 and over.</small>
             <p>DVI. On a scale from 1 = not at all to 10 = total, how do you assess the level of development of the youth in the following areas of independent living skills/abilities?</p>
@@ -5096,7 +5096,7 @@
                 </select>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. RISK BEHAVIORS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. RISK BEHAVIORS</h2>
 
             <small class="my-2 my-2 block italic text-red-500">Attention! This section is to be filled in only for children older than 10 years.</small>
             <p>QRISKP: During the child's time into the system (from their last admission until present), has the child had any of the following risk behaviors:</p>
@@ -5237,7 +5237,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. CASE MONITORING</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. CASE MONITORING</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMNT1. Does the child currently have an assigned specialist who is responsible of monitoring his/her case and coordinating his/her activities?</div>
@@ -5350,7 +5350,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. THE CHILD'S RELATIONSHIP WITH THEIR FAMILY AND FUTURE PLANS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. THE CHILD'S RELATIONSHIP WITH THEIR FAMILY AND FUTURE PLANS</h2>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
                 <div>SK2. In the past six months, has the child visited or has been visited by the parents or another adult family member?</div>
