--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ЛИЦО, ЗАПОЛНИВШЕЕ СВЕДЕНИЯ ОБ ЭТОМ РЕБЕНКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ЛИЦО, ЗАПОЛНИВШЕЕ СВЕДЕНИЯ ОБ ЭТОМ РЕБЕНКЕ</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Имя</div>
                 <div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ОСНОВНАЯ ИНФОРМАЦИЯ О РЕБЕНКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. ОСНОВНАЯ ИНФОРМАЦИЯ О РЕБЕНКЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PIN. Свидетельство о рождении/Паспорт/Документ, удостоверяющий личность</div>
@@ -295,7 +295,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. ИНФОРМАЦИЯ О СЕМЬЕ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. ИНФОРМАЦИЯ О СЕМЬЕ РЕБЕНКА</h2>
 
 
 
@@ -2168,7 +2168,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ПРИЕМ РЕБЕНКА В СПЕЦИАЛИЗИРОВАННОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ПРИЕМ РЕБЕНКА В СПЕЦИАЛИЗИРОВАННОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SA1. Дата размещения ребенка в данное специализированное образовательное учреждение</div>
@@ -3183,7 +3183,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. CURRENT CHILD SITUATION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. CURRENT CHILD SITUATION</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. ОБРАЗОВАНИЕ</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -4757,7 +4757,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. НАВЫКИ НЕЗАВИСИМОЙ ЖИЗНИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. НАВЫКИ НЕЗАВИСИМОЙ ЖИЗНИ</h2>
 
             <small class="my-2 my-2 block italic text-red-500">Этот раздел распространяется только на молодежь в возрасте 16 лет и старше.</small>
             <p>DVI. По шкале от 1 = совсем нет до 10 = всего, как вы оцениваете уровень развития молодежи в следующих областях навыков/способностей самостоятельной жизни?</p>
@@ -5096,7 +5096,7 @@
                 </select>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. РИСКОВАННОЕ ПОВЕДЕНИЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. РИСКОВАННОЕ ПОВЕДЕНИЕ</h2>
 
             <small class="my-2 my-2 block italic text-red-500">Внимание! Данный раздел заполняется только для детей старше 10 лет.</small>
             <p>QRISKP: За время пребывания ребенка в системе (с момента его последнего приема до настоящего времени) было ли у ребенка какое-либо из следующих рискованных форм поведения:</p>
@@ -5237,7 +5237,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. МОНИТОРИНГ ДЕЛА РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. МОНИТОРИНГ ДЕЛА РЕБЕНКА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMNT1. Есть ли у ребенка в настоящее время закрепленный специалист, который проводит мониторинг дела ребенка и координирует его/ее деятельность?</div>
@@ -5350,7 +5350,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. ОТНОШЕНИЯ РЕБЕНКА С СЕМЬЕЙ И ПЛАНЫ НА БУДУЩЕЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. ОТНОШЕНИЯ РЕБЕНКА С СЕМЬЕЙ И ПЛАНЫ НА БУДУЩЕЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
                 <div>SK2. За последние шесть месяцев посещал ли ребенок семью или посещали ли его родители или другой взрослый член семьи?</div>
