--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. USHBU BOLA HAQIDA MA'LUMOTNI TO'LDIRGAN SHAXS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. USHBU BOLA HAQIDA MA'LUMOTNI TO'LDIRGAN SHAXS</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Ism</div>
                 <div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. BOLA HAQIDA ASOSIY MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. BOLA HAQIDA ASOSIY MA'LUMOT</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PIN. Tug'ilganlik haqidagi guvohnoma / Pasport / shaxsni tasdiqlovchi hujjat</div>
@@ -295,7 +295,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. BOLA OILASI HAQIDA MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. BOLA OILASI HAQIDA MA'LUMOT</h2>
 
 
 
@@ -2168,7 +2168,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. BOLANING MAXSUS TA'LIM MUASASASIGA QABUL QILINISHI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. BOLANING MAXSUS TA'LIM MUASASASIGA QABUL QILINISHI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>SA1. Bolani ushbu ixtisoslashtirilgan ta'lim muassasasiga joylashtirilgan sana</div>
@@ -3183,7 +3183,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. ТЕКУЩЕЕ ПОЛОЖЕНИЕ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ТЕКУЩЕЕ ПОЛОЖЕНИЕ РЕБЕНКА</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. TA'LIM</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -4757,7 +4757,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. MUSTAQIL YASHASH KO'NIKMALARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. MUSTAQIL YASHASH KO'NIKMALARI</h2>
 
             <small class="my-2 my-2 block italic text-red-500">Bo'lim faqat 16 va undan katta yoshdagi yoshlar uchun amal qiladi.</small>
             <p>DVI. 1 = tamoman yo'qdan 10 gacha bo'lgan shkala bo'yicha,  yoshlarning quyidagi mustaqil yashash ko'nikmalari/qobiliyatlari bo'yicha rivojlanish darajasini qanday baholaysiz?</p>
@@ -5096,7 +5096,7 @@
                 </select>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. XAVFLI XULQ-ATVOR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. XAVFLI XULQ-ATVOR</h2>
 
             <small class="my-2 my-2 block italic text-red-500">Diqqat! Ushbu bo'lim faqat 10 yoshdan katta bolalar uchun to'ldirilishi kerak.</small>
             <p>QRISKP: Bolaning tizimga qabul qilinishi davomida (so'nggi qabul qilinganidan to hozirgi kungacha) bolada quyidagi xavfli xatti-harakatlardan birortasi bo'lganmi:</p>
@@ -5237,7 +5237,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. BOLA ISHINING MONITORINGI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. BOLA ISHINING MONITORINGI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>CMNT1. Hozirgi vaqtda bolaning ishini monitoring qilish va faoliyatini muvofiqlashtirish uchun mas'ul mutaxassis tayinlanganmi?</div>
@@ -5350,7 +5350,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">9. BOLANING OILASI BILAN MUNOSABATLARI VA KELAJAK REJALARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">9. BOLANING OILASI BILAN MUNOSABATLARI VA KELAJAK REJALARI</h2>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
                 <div>SK2. O'tgan olti oy ichida bola ota-onasinikga bordimi yohud un iota-onasi yoki boshqa katta yoshli oila a'zosi kelib ko'rib ketdimi?</div>
