--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Name of the institution</div>
                 <div>
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. INFORMATION ABOUT THE POSITION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. INFORMATION ABOUT THE POSITION</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>J1. Job title</div>
@@ -281,7 +281,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. INFORMATION ABOUT THE EMPLOYEE</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. INFORMATION ABOUT THE EMPLOYEE</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
