--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Название учреждения</div>
                 <div>
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ИНФОРМАЦИЯ О ДОЛЖНОСТИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. ИНФОРМАЦИЯ О ДОЛЖНОСТИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>J1. Должность</div>
@@ -281,7 +281,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. ИНФОРМАЦИЯ О РАБОТНИКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. ИНФОРМАЦИЯ О РАБОТНИКЕ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
