--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. MUASSASA HAQIDA UMUMIY MAʹLUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. MUASSASA HAQIDA UMUMIY MAʹLUMOT</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Muassasa nomi</div>
                 <div>
@@ -141,7 +141,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. LAVOZIM HAQIDA MAʹLUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. LAVOZIM HAQIDA MAʹLUMOT</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>J1. Lavozim nomi</div>
@@ -281,7 +281,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. XODIM HAQIDA MAʹLUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. XODIM HAQIDA MAʹLUMOT</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
