--- a/src/pages/instruments/04_qmr_ru.html
+++ b/src/pages/instruments/04_qmr_ru.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ОБЩАЯ ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Название учреждения</div>
                 <div>
@@ -217,7 +217,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. РАСПОЛОЖЕНИЕ И ДОСТУПНОСТЬ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. РАСПОЛОЖЕНИЕ И ДОСТУПНОСТЬ</h2>
 
             <p class="mt-6">LA1. Имеет ли учреждение в непосредственной близости (в пределах 3-7 минут ходьбы от его границ) что-либо из перечисленного? …</p>
 
@@ -487,7 +487,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. ЗЕМЛЯ, ЗДАНИЯ И СООРУЖЕНИЯ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. ЗЕМЛЯ, ЗДАНИЯ И СООРУЖЕНИЯ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">AF1. Какова общая площадь земельного участка, на котором расположено учреждение?</div>
@@ -1158,7 +1158,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. РАЗМЕЩЕНИЕ И УСЛОВИЯ ПРОЖИВАНИЯ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. РАЗМЕЩЕНИЕ И УСЛОВИЯ ПРОЖИВАНИЯ</h2>
 
 
             <table class="w-full mt-6" aria-label="АС1. Пожалуйста, предоставьте следующую информацию о вместимости учреждения">
@@ -1758,7 +1758,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. УСЛОВИЯ ПИТАНИЯ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. УСЛОВИЯ ПИТАНИЯ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div class="col-span-1">
@@ -1996,7 +1996,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. УСЛОВИЯ ДЛЯ ОБРАЗОВАТЕЛЬНОЙ И ДРУГОЙ СПЕЦИАЛЬНОЙ ДЕЯТЕЛЬНОСТИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. УСЛОВИЯ ДЛЯ ОБРАЗОВАТЕЛЬНОЙ И ДРУГОЙ СПЕЦИАЛЬНОЙ ДЕЯТЕЛЬНОСТИ</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <small class="italic block uppercase">ТОЛЬКО ДЛЯ ШКОЛ-ИНТЕРНАТОВ</small>
@@ -2486,7 +2486,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. ВОЗМОЖНОСТИ ДЛЯ ПРОВЕДЕНИЯ СВОБОДНОГО ВРЕМЕНИ И ОБЩЕНИЯ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. ВОЗМОЖНОСТИ ДЛЯ ПРОВЕДЕНИЯ СВОБОДНОГО ВРЕМЕНИ И ОБЩЕНИЯ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
@@ -2666,7 +2666,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. ФИНАНСОВЫЕ РЕСУРСЫ -РАСХОДЫ УЧРЕЖДЕНИЯ  ЗА 2023 ГОД</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. ФИНАНСОВЫЕ РЕСУРСЫ -РАСХОДЫ УЧРЕЖДЕНИЯ  ЗА 2023 ГОД</h2>
 
             <p class="mt-6">Пожалуйста, заполните следующую таблицу, указав фактическую сумму денег, потраченную по каждой статье бюджета в отчетном году (2023)</p>
 
