--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -53,7 +53,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. THE PERSON WHO COMPLETED THE INFORMATION ABOUT THIS YOUNG PERSON</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. THE PERSON WHO COMPLETED THE INFORMATION ABOUT THIS YOUNG PERSON</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Name</div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -413,7 +413,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. HOUSING</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. HOUSING</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PR1. Has the young person had any legal entitlement to their parents' or other persons' properties?</div>
@@ -678,7 +678,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. EDUCATION, EMPLOYMENT AND INCOME</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. EDUCATION, EMPLOYMENT AND INCOME</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">EE1. What is the person's current level of education?</div>
@@ -980,7 +980,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. HEALTH</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. HEALTH</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">HE1. Is the person enrolled with a general practitioner/visiting nurse/family doctor?</div>
@@ -1580,7 +1580,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. LIFE SKILLS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. LIFE SKILLS</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -1761,7 +1761,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. SOCIAL CONNECTIONS AND PARTICIPATION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. SOCIAL CONNECTIONS AND PARTICIPATION</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
@@ -1961,7 +1961,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. CONCLUSIONS AND RECOMMENDATIONS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. CONCLUSIONS AND RECOMMENDATIONS</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">CR1. Has the young person successfully settled into their new community?</div>
