--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -53,7 +53,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ЧЕЛОВЕК, ЗАПОЛНИВШИЙ ИНФОРМАЦИЮ ОБ ЭТОМ МОЛОДОМ ЧЕЛОВЕКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ЧЕЛОВЕК, ЗАПОЛНИВШИЙ ИНФОРМАЦИЮ ОБ ЭТОМ МОЛОДОМ ЧЕЛОВЕКЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Имя</div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -413,7 +413,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. ЖИЛЬЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. ЖИЛЬЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PR1. Имеет ли молодой человек какое-либо законное право на имущество своих родителей или других лиц?</div>
@@ -678,7 +678,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ОБРАЗОВАНИЕ, ЗАНЯТОСТЬ И ДОХОДЫ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ОБРАЗОВАНИЕ, ЗАНЯТОСТЬ И ДОХОДЫ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">ЕЕ1. Каков текущий уровень образования человека?</div>
@@ -980,7 +980,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. ЗДОРОВЬЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ЗДОРОВЬЕ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">HE1. Состоит ли человек на учете у врача общей практики/патронажной медсестры/врача семейной поликлиники?</div>
@@ -1580,7 +1580,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. ЖИЗНЕННЫЕ НАВЫКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. ЖИЗНЕННЫЕ НАВЫКИ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -1761,7 +1761,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. СОЦИАЛЬНЫЕ СВЯЗИ И УЧАСТИЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. СОЦИАЛЬНЫЕ СВЯЗИ И УЧАСТИЕ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
@@ -1961,7 +1961,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. ВЫВОДЫ И РЕКОМЕНДАЦИИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. ВЫВОДЫ И РЕКОМЕНДАЦИИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">CR1. Успешно ли молодой человек освоился в новом сообществе?</div>
