--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -53,7 +53,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. USHBU YOSH ODAM HAQIDA MAʼLUMOTNI TOʻLDIRGAN MUTAXASSIS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. USHBU YOSH ODAM HAQIDA MAʼLUMOTNI TOʻLDIRGAN MUTAXASSIS</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Ismi</div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -413,7 +413,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. UY-JOY</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. UY-JOY</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PR1. Yosh odamning ota-onasi yoki boshqa shaxslarning mulkiga qonuniy huquqi bormi?</div>
@@ -678,7 +678,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. TA'LIM, BANDLIK VA DAROMAD</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. TA'LIM, BANDLIK VA DAROMAD</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">EE1. Shaxsning hozirgi ma'lumoti qanday?</div>
@@ -980,7 +980,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. Salomatlik</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. Salomatlik</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">НЕ 1. Yosh odam umumiy amaliyot shifokori/patronaj hamshirasi/oilaviy poliklinika shifokorida ro'yxatda turadimi?</div>
@@ -1580,7 +1580,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. HAYOTIY KO'NIKMALAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. HAYOTIY KO'NIKMALAR</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -1761,7 +1761,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. IJTIMOIY ALOQALAR VA ISHTIROK</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. IJTIMOIY ALOQALAR VA ISHTIROK</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
@@ -1961,7 +1961,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. XULOSA VA TAVSIYALAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. XULOSA VA TAVSIYALAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">CR1. Yosh odam yangi hamjamiyatiga muvaffaqiyatli joylashdimi?</div>
