--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -32,7 +32,7 @@
             <p class="mb-2">This questionnaire aims to identify and reconnect with young people who have left the alternative care system during the previous year.</p>
             <p class="mb-2">Please complete this questionnaire separately for each young person (18+) who in the last 12 months left the alternative child care system, regardless of the type of service they receive (residential or family-based). This questionnaire will be completed for young persons who were in the following types of services of the alternative child care system: Mehribonlik houses, Muruvvat houses for children with disabilities, family-type children's homes, SOS children's villages/families. For specialized boarding schools, this questionnaire should be filled in for each young person (16+) who completed their studies in boarding schools during the previous year.</p>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. INFORMATION ABOUT THE INSTITUTION AND THE PERSON WHO COMPLETED THE TRACING QUESTIONNAIRE</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. INFORMATION ABOUT THE INSTITUTION AND THE PERSON WHO COMPLETED THE TRACING QUESTIONNAIRE</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Service code from the registry</div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
