--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -32,7 +32,7 @@
             <p class="mb-2">Цель этого опросника - выявить молодых людей, покинувших систему альтернативного опеки в течение предыдущего года, и восстановить с ними связь.</p>
             <p class="mb-2">Пожалуйста, заполните эту анкету отдельно для каждого молодого человека (старше 18 лет), который за последние 12 месяцев покинул систему альтернативной опеки , независимо от типа услуг, которые он получает (в учреждении или в семье). Эта анкета будет заполнена для молодых людей, которые находились в следующих учреждениях системы альтернативной опеки : дома Мехрибонлик, дома Мурувват для детей с инвалидностью, детские дома семейного типа, SOS Детские деревни/семьи SOS. Для специализированных школ-интернатов эта анкета должна быть заполнена для каждого молодого человека (старше 16 лет), который завершил свое обучение в школах-интернатах в течение предыдущего года.</p>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ И ЛИЦЕ, ЗАПОЛНИВШЕМ АНКЕТУ ПО ОТСЛЕЖИВАНИЮ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ И ЛИЦЕ, ЗАПОЛНИВШЕМ АНКЕТУ ПО ОТСЛЕЖИВАНИЮ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Код услуги из реестра</div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
