--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -32,7 +32,7 @@
             <p class="mb-2">Ushbu so'rovnomaning maqsadi - o'tgan yil davomida muqobil vasiylik tizimini tark etgan yosh shaxslarni aniqlash va ular bilan qayta bog'lanishdir.</p>
             <p class="mb-2">Iltimos, ushbu so'rovnomani oxirgi 12 oy ichida xizmat turidan qat'i nazar (muassasada yoki oilada), bolalarga vasiylik qilishning muqobil tizimini tark etgan har bir yosh shaxs (18 yoshdan katta) uchun alohida to'ldiring. Ushbu so'rovnoma bolalarga vasiylik qilishning muqobil tizimiga kiruvchi  quyidagi muassasalarni tark etgan yoshlar uchun to'ldiriladi: Mehribonlik uylari, nogironligi mavjud bolalar uchun Muruvvat uylari, oilaviy bolalar uylari, SOS bolalar qishloqlari/oilalari. Ixtisoslashgan maktab-internatlar uchun ushbu so'rovnoma o'tgan yil davomida maktab-internatlarda o'qishni tugatgan har bir yosh shaxs (16 yoshdan katta) uchun to'ldirilishi kerak.</p>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. KUZATUV SO'ROVNOMASINI TO'LDIRGAN SHAXS VA MUASSASA TO'G'RISIDAGI MA'LUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. KUZATUV SO'ROVNOMASINI TO'LDIRGAN SHAXS VA MUASSASA TO'G'RISIDAGI MA'LUMOTLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Ro'yxatdan o'tish kitobidan xizmat kodi</div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
