--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. INFORMATION ABOUT THE FOSTER PARENTS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. INFORMATION ABOUT THE FOSTER PARENTS</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>IFP1. Place of residence:</div>
                 <div></div>
@@ -476,7 +476,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. Fostered children</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. Fostered children</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>FC1. Since its establishment, how many children have been placed in the family-type home?</div>
@@ -1609,7 +1609,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. EXITS FROM THIS FAMILY-TYPE HOME DURING THE REPORTING YEAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. EXITS FROM THIS FAMILY-TYPE HOME DURING THE REPORTING YEAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. During the reporting year, did any child leave this family-type home?</div>
@@ -2108,7 +2108,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. QUALITY OF CARE ASSURANCE</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. QUALITY OF CARE ASSURANCE</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Have the foster parents attended the mandatory training course for parents?</div>
