--- a/src/pages/instruments/07_ftch_ru.html
+++ b/src/pages/instruments/07_ftch_ru.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ИНФОРМАЦИЯ О ПРИЕМНЫХ РОДИТЕЛЯХ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ИНФОРМАЦИЯ О ПРИЕМНЫХ РОДИТЕЛЯХ</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>IFP1. Место жительства:</div>
                 <div></div>
@@ -476,7 +476,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. Приемные дети</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. Приемные дети</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>FC1. Сколько детей было помещено в дом семейного типа с момента его создания?</div>
@@ -1609,7 +1609,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ВЫХОДЫ ИЗ ДАННОГО ДОМА СЕМЕЙНОГО ТИПА В ТЕЧЕНИЕ ОТЧЕТНОГО ГОДА.</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ВЫХОДЫ ИЗ ДАННОГО ДОМА СЕМЕЙНОГО ТИПА В ТЕЧЕНИЕ ОТЧЕТНОГО ГОДА.</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. В течение отчетного года  покинет ли этот дом семейного типа кто-то из детей?</div>
@@ -2108,7 +2108,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. ОБЕСПЕЧЕНИЕ КАЧЕСТВА ОПЕКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ОБЕСПЕЧЕНИЕ КАЧЕСТВА ОПЕКИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Прошли ли приемные родители обязательный курс обучения родителей?</div>
