--- a/src/pages/instruments/07_ftch_uz.html
+++ b/src/pages/instruments/07_ftch_uz.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. TUTINGAN OTA-ONALAR HAQIDA MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. TUTINGAN OTA-ONALAR HAQIDA MA'LUMOT</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>IFP1. Yashash manzili:</div>
                 <div></div>
@@ -476,7 +476,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. Vasiylikka olingan bolalar</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. Vasiylikka olingan bolalar</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>FC1. Tashkil etilganidan beri oilaviy bolalar uyiga necha nafar  bola joylashtirildi?</div>
@@ -1609,7 +1609,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. BU OILAVIY BOLALAR UYIDAN HISOBOT DAVRIDA CHIQISHLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. BU OILAVIY BOLALAR UYIDAN HISOBOT DAVRIDA CHIQISHLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. Hisobot davrida davomida qaysi bir bola bu oilaviy bolalar uyini tark etdimi?</div>
@@ -2108,7 +2108,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. VASIYLIK SIFATINI TA'MINLASH</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. VASIYLIK SIFATINI TA'MINLASH</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Tutingan ota-onalar ota-onalar majburiy o'quv kursini o'tishdimi?</div>
