--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -93,7 +93,8 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. INFORMATION ABOUT THE PATRONAT FAMILY</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. INFORMATION ABOUT THE PATRONAT FAMILY</h2>
+
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PF1. Place of residence:</div>
                 <div></div>
@@ -357,7 +358,7 @@
                 </div>
             </div>
 
-            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4">3. Children placed in the patronat family</h2>
+            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4 mt-10">3. Children placed in the patronat family</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. For each child currently placed into care in this patronat family, please record the following information</p>
 
@@ -1453,7 +1454,7 @@
 
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. EXITS FROM THIS PATRONAT FAMILY DURING THE REPORTING YEAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. EXITS FROM THIS PATRONAT FAMILY DURING THE REPORTING YEAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. During the reporting year, did any child leave this patronat family?</div>
@@ -1952,7 +1953,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. QUALITY OF CARE ASSURANCE</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. QUALITY OF CARE ASSURANCE</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Is there a designated specialist from the district/city child protection department/ guardianship body assigned to oversee how the guardian in this patronat family meet their responsibilities?</div>
