--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Name of the institution</div>
                 <div>
@@ -217,7 +217,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. LOCATION AND ACCESSIBILITY</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. LOCATION AND ACCESSIBILITY</h2>
 
             <p class="mt-6">LA1. Does the institution have any of the following in its immediate vicinity (within a 3 to 7 minutes walk of its boundaries)?…</p>
 
@@ -487,7 +487,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. LAND, BUILDINGS AND FACILITIES</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. LAND, BUILDINGS AND FACILITIES</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">AF1. What is the total area of the land on which the institution is located?</div>
@@ -1158,7 +1158,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ACCOMMODATION CAPACITY AND LIVING CONDITIONS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ACCOMMODATION CAPACITY AND LIVING CONDITIONS</h2>
 
 
             <table class="w-full mt-6" aria-label="AC1. Please provide the following information about the institution's accommodation capacity">
@@ -1758,7 +1758,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. CATERING CONDITIONS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. CATERING CONDITIONS</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div class="col-span-1">
@@ -1996,7 +1996,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. FACILITIES FOR EDUCATION AND OTHER SPECIFIC ACTIVITIES</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. FACILITIES FOR EDUCATION AND OTHER SPECIFIC ACTIVITIES</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <small class="italic block uppercase">FOR BOARDING SCHOOLS ONLY</small>
@@ -2486,7 +2486,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. FACILITIES TO SPEND FREE TIME AND SOCIALIZING</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. FACILITIES TO SPEND FREE TIME AND SOCIALIZING</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
@@ -2666,7 +2666,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. FINANCIAL RESOURCES - INSTITUTION'S EXPENDITURES IN 2023</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. FINANCIAL RESOURCES - INSTITUTION'S EXPENDITURES IN 2023</h2>
 
             <p class="mt-6">Please fill in the following table with the actual amount of money spent on each budgetary line in 2023</p>
 
