--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. MUASSASA HAQIDA UMUMIY MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. MUASSASA HAQIDA UMUMIY MA'LUMOT</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Muassasa nomi</div>
                 <div>
@@ -217,7 +217,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. JOYI VA BORISH QULAYLIGI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. JOYI VA BORISH QULAYLIGI</h2>
 
             <p class="mt-6">LA1. Muassasaning yon atrofida (3-7 daqiqalik piyoda masofada) quyidagilardan birortasi bormi?…</p>
 
@@ -487,7 +487,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">3. YER, BINO VA INSHOOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. YER, BINO VA INSHOOTLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">AF1. Muassasa joylashgan yerning umumiy maydoni qancha?</div>
@@ -1158,7 +1158,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. TURAR JOY VA YASHAH SHAROITLARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. TURAR JOY VA YASHAH SHAROITLARI</h2>
 
 
             <table class="w-full mt-6" aria-label="AC1. Iltimos, muassasaning turar joy sig'imi haqida quyidagi ma'lumotlarni taqdim eting">
@@ -1758,7 +1758,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. OVQATLANISH SHAROITLARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. OVQATLANISH SHAROITLARI</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div class="col-span-1">
@@ -1996,7 +1996,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">6. TA'LIM VA BOSHQA MAXSUS FAOLIYAT UCHUN SHAROITLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">6. TA'LIM VA BOSHQA MAXSUS FAOLIYAT UCHUN SHAROITLAR</h2>
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <small class="italic block uppercase">FAQAT MAKTAB-INTERNATLAR UCHUN</small>
@@ -2486,7 +2486,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">7. BOSCH VAQT O'TKAZISH VA MULOQOT UCHUN IMKONIYATLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">7. BOSCH VAQT O'TKAZISH VA MULOQOT UCHUN IMKONIYATLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
@@ -2666,7 +2666,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">8. MOLIYA RESURSLARI - MUASSASANING 2023 YIL XARAJATLARI</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">8. MOLIYA RESURSLARI - MUASSASANING 2023 YIL XARAJATLARI</h2>
 
             <p class="mt-6">Iltimos, quyidagi jadvalni 2023 yilda har bir byudjet yoʻnalishi boʻyicha sarflangan mablagʻlarning haqiqiy miqdori bilan toʻldiring</p>
 
