--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -93,7 +93,8 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ИНФОРМАЦИЯ О ПАТРОНАТНОЙ СЕМЬЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. ИНФОРМАЦИЯ О ПАТРОНАТНОЙ СЕМЬЕ</h2>
+
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PF1. Место жительства:</div>
                 <div></div>
@@ -357,7 +358,7 @@
                 </div>
             </div>
 
-            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4">3. Дети, помещенные в патронатную семью</h2>
+            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4 mt-10">3. Дети, помещенные в патронатную семью</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. Для каждого ребенка, находящегося в настоящее время под опекой данной патронатной семьи, запишите следующую информацию</p>
 
@@ -1453,7 +1454,7 @@
 
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. ВЫХОДЫ ИЗ ЭТОЙ ПАТРОНАТНОЙ СЕМЬИ В ТЕЧЕНИЕ ОТЧЕТНОГО ГОДА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. ВЫХОДЫ ИЗ ЭТОЙ ПАТРОНАТНОЙ СЕМЬИ В ТЕЧЕНИЕ ОТЧЕТНОГО ГОДА</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. В течение отчетного года кто-нибудь из детей покинет эту патронатную семью?</div>
@@ -1952,7 +1953,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. ОБЕСПЕЧЕНИЕ КАЧЕСТВА ОПЕКИ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ОБЕСПЕЧЕНИЕ КАЧЕСТВА ОПЕКИ</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Имеется ли в районном/городском отделе защиты детей/органе опеки специалист, назначенный для наблюдения  за выполнением опекуном данной патронатной семьи своих обязанностей?</div>
