--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -93,7 +93,8 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. PATRONAT OILASI HAQIDA MA'LUMOT</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. PATRONAT OILASI HAQIDA MA'LUMOT</h2>
+
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PF1. Yashash joyi:</div>
                 <div></div>
@@ -357,7 +358,7 @@
                 </div>
             </div>
 
-            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4">3. Patronat oilaga joylashtirilgan bolalar</h2>
+            <h2 id="fc4header" class="hidden text-2xl font-bold text-gray-700 mb-4 mt-10">3. Patronat oilaga joylashtirilgan bolalar</h2>
 
             <p id="fc4text" class="hidden mt-6">FC4. Hozirda ushbu patronat oila qaramog'ida bo'lgan har bir bola uchun quyidagi ma'lumotlarni yozib oling</p>
 
@@ -1453,7 +1454,7 @@
 
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">4. HISOBOY YILDA BU PATRONAT OILASIDAN CHIQISHLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">4. HISOBOY YILDA BU PATRONAT OILASIDAN CHIQISHLAR</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>EX1. Hisobot yil davomida bolalardan birontasibu patronat oilani tark etadimi?</div>
@@ -1952,7 +1953,7 @@
             </table>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4">5. VASIYLIK SIFATINI TA'MINLASH</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. VASIYLIK SIFATINI TA'MINLASH</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
                 <div>QS1. Tuman/shahar bolalarni himoya qilish bo'limi/ vasiylik organidan ushbu patronat oiladagi vasiy o'z vazifalarini qanday bajarishini nazorat qilish uchun tayinlangan mutaxassis bormi?</div>
